config add json format

--- a/plugins.ini
+++ b/plugins.ini
@@ -6,6 +6,8 @@ js[]=src-min/ace.js
 js[]=src-min/mode-javascript.js
 js[]=src-min/mode-css.js
 js[]=src-min/mode-html.js
+js[]=src-min/mode-json.js
+
 
 [bootstrap-select/bootstrap-select]
 js[]=dist/js/bootstrap-select.min.js
