--- a/plugins.ini
+++ b/plugins.ini
@@ -38,6 +38,7 @@ js[]=lang/{language}.js
 [vue]
 js[]=vue.js
 js[]=vue-resource.min.js
+js[]=vue-local-storage.min.js
 
 [bootstrap-iconpicker]
 css[]=css/bootstrap-iconpicker.min.css
