--- a/acl.ini
+++ b/acl.ini
@@ -37,6 +37,7 @@ System/forget_password=Guests
 System/logout=Power Users,Users,Guests
 access_deny=Power Users,Users,Guests
 404_not_found=Power Users,Users
+cancel_viewas=Power Users,Users
 
 UI/save=Power Users,Users
 UI/save/reset=Power Users,Users
