--- a/composer.json
+++ b/composer.json
@@ -32,24 +32,24 @@
         "hostlink/r-db": "1.*",
         "hostlink/holiday-hk": "1.*",
         "hostlink/weather": "1.*",
-        "hostlink/html": "*",
+        "hostlink/html": "1.*",
         "twig/twig": "*",
         "twig/extensions": "*",
-        "sepia/po-parser": "*",
+        "sepia/po-parser": "5.*",
         "components/font-awesome": "5.*",
         "components/jquery": "2.2.4",
-        "driftyco/ionicons": "*",
+        "driftyco/ionicons": "2.*",
         "twbs/bootstrap": "3.*",
-        "bassjobsen/bootstrap-3-typeahead": "*",
+        "bassjobsen/bootstrap-3-typeahead": "4.*",
         "fullcalendar/fullcalendar": "3.*",
         "eternicode/bootstrap-datepicker": "1.*",
         "eonasdan/bootstrap-datetimepicker": "4.*",
         "robinherbots/jquery.inputmask": "3.*",
-        "cache/apcu-adapter": "*",
-        "bootstrap-select/bootstrap-select": "*",
-        "phpmailer/phpmailer": "*",
-        "symfony/yaml": "*",
-        "monolog/monolog": "*"
+        "cache/apcu-adapter": "1.*",
+        "bootstrap-select/bootstrap-select": "1.*",
+        "phpmailer/phpmailer": "6.*",
+        "symfony/yaml": "3.*",
+        "monolog/monolog": "1.*"
     },
     "suggest": {
         "ckeditor/ckeditor": "JavaScript WYSIWYG web text editor.",
