--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ company=HostLink
 
 roxy_fileman=0
 roxy_fileman_path=/uploads
-#roxy_fileman_width=300
+;roxy_fileman_width=300
 
 footer_content=
 
@@ -31,21 +31,11 @@ return-path=
 
 password-length=6
 
-[ui]
-@font-size-base=14px
-@body-bg=#ffffff
-@navbar-height=35px
-@nav-link-padding=7px 10px
-navbar-inverse=1
-navbar-fixed-top=1
-show-logout=0
-bs-container=container-fluid
-table-condensed=1
-input-size=input-sm
-btn-size=btn-sm
-jqgrid-font-size=
-rt-font-size=
-show-system-time=0
 
-[system]
-update_source=http://raymond2.hostlink.com.hk/cms4_source/
+[firebase]
+apiKey=
+authDomain=
+databaseURL=
+projectId=
+storageBucket=
+messagingSenderId=
