--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ roxy_fileman_path=/uploads
 
 footer_content=
 
-copyright-year=2015
+copyright-year=2017
 copyright-url=http://www.hostlink.com.hk
 copyright-name=HostLink
 logo=
@@ -30,6 +30,8 @@ smtp-password=
 return-path=
 
 password-length=6
+
+log-save=1
 
 
 [firebase]
