rt search range fixed

--- a/pages/System/setting.yml
+++ b/pages/System/setting.yml
@@ -18,3 +18,7 @@ menu:
   Export: 
     link: System/export
     icon: fa fa-download
+  PHPUnit test:
+    link: System/phpunit
+    icon: fa fa-list-alt
+  
