--- a/config.ini
+++ b/config.ini
@@ -10,8 +10,8 @@ roxy_fileman_path=/uploads
 
 footer_content=
 
-copyright-year=2017
-copyright-url=http://www.hostlink.com.hk
+copyright-year=2018
+copyright-url=https://www.hostlink.com.hk
 copyright-name=HostLink
 logo=
 
