--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "hostlink/r-p": "1.*",
         "hostlink/r-bs": "1.*",
         "hostlink/r-db": "^1.3",
-        "hostlink/holiday-hk": "1.*",
+        "hostlink/holiday-hk": "^1.2.1",
         "hostlink/weather": "1.*",
         "hostlink/html": "1.*",
         "twig/twig": "*",
@@ -78,5 +78,5 @@
         }
     ],
     "minimum-stability": "stable",
-    "version": "5.4.4"
+    "version": "5.4.5"
 }
