--- a/pages/User/setting.ini
+++ b/pages/User/setting.ini
@@ -1,8 +1,8 @@
 class=App\User
 show_create=1
-icon=fa fa-user
+icon=fa fa-user fa-fw
 group=System
 
 [menu]
-My favoriate[icon]=fa fa-heart
+My favoriate[icon]=fa fa-heart fa-fw
 My favoriate[link]=User/myfav
