--- a/pages/System/setting.yml
+++ b/pages/System/setting.yml
@@ -5,20 +5,20 @@ icon: fa fa-desktop fa-fw
 menu:
   Update: 
     link: System/update
-    icon: fa fa-arrow-up
+    icon: fa fa-arrow-up fa-fw
   Front translate: 
     link: System/front_translate_twig
-    icon: fa fa-language
+    icon: fa fa-language fa-fw
   Composer: 
     link: System/composer
-    icon: fa fa-cogs
+    icon: fa fa-cogs fa-fw
   DB check: 
     link: System/db_check
-    icon: fa fa-check-circle
+    icon: fa fa-check-circle fa-fw
   Export: 
     link: System/export
-    icon: fa fa-download
+    icon: fa fa-download fa-fw
   PHPUnit test:
     link: System/phpunit
-    icon: fa fa-list-alt
+    icon: fa fa-list-alt fa-fw
   
