--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
     "require": {
         "php": ">=5.6",
         "hostlink/r-psr7": "2.*",
-        "hostlink/r": "^2.3",
+        "hostlink/r": "^2.4",
         "hostlink/r-p": "1.*",
         "hostlink/r-bs": "1.*",
-        "hostlink/r-db": "^1.3",
+        "hostlink/r-db": "2.*",
         "hostlink/holiday-hk": "^1.2.1",
         "hostlink/weather": "1.*",
         "hostlink/html": "1.*",
@@ -79,5 +79,5 @@
         }
     ],
     "minimum-stability": "stable",
-    "version": "5.4.11"
+    "version": "5.5.0"
 }
