--- a/plugins.yml
+++ b/plugins.yml
@@ -30,7 +30,7 @@ vue:
   js: ['vue.js','vue-resource.min.js']
 
 bootstrap-iconpicker:
-  js: ['js/iconset/iconset-all.min.js','js/bootstrap-iconpicker.min.js']
+  js: ['js/bootstrap-iconpicker-iconset-all.min.js','js/bootstrap-iconpicker.min.js']
   css: ['css/bootstrap-iconpicker.min.css']
 
 fontawesome-iconpicker:
