--- a/pages/System/setting.yml
+++ b/pages/System/setting.yml
@@ -21,4 +21,8 @@ menu:
   PHPUnit test:
     link: System/phpunit
     icon: fa fa-list-alt fa-fw
+  DB:
+    link: System/db
+    icon: fa fa-database
+  
   
