--- a/acl.ini
+++ b/acl.ini
@@ -42,7 +42,7 @@ cancel_viewas=Power Users,Users
 UI/save=Power Users,Users
 UI/save/reset=Power Users,Users
 UI/ae=Power Users,Users
-UI/del=Power Users,Users
+UI/index/del=Power Users,Users
 
 Message/click=Power Users,Users
 Dashboard=Power Users,Users
