reset layou button

--- a/acl.ini
+++ b/acl.ini
@@ -43,11 +43,13 @@ UI/save=Power Users,Users
 UI/save/reset=Power Users,Users
 UI/ae=Power Users,Users
 UI/index/del=Power Users,Users
+UI/reset_layout=Power Users,Users
 
 Message/click=Power Users,Users
 Dashboard=Power Users,Users
 Translate/resource=Power Users,Users
 User/image=Power Users,Users
+
 
 [FC]
 Dashboard=Power Users,Users
