--- a/config.ini
+++ b/config.ini
@@ -36,6 +36,8 @@ password-length=6
 
 log-save=1
 
+rt2-responsive=1
+
 
 [firebase]
 apiKey=
@@ -44,3 +46,4 @@ databaseURL=
 projectId=
 storageBucket=
 messagingSenderId=
+
