--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "twig/twig": "*",
         "twig/extensions": "*",
         "sepia/po-parser": "5.*",
-        "components/font-awesome": "5.*",
+        "hostlink/font-awesome": "5.*",
         "components/jquery": "2.2.4",
         "driftyco/ionicons": "2.*",
         "twbs/bootstrap": "3.*",
@@ -80,5 +80,5 @@
         }
     ],
     "minimum-stability": "stable",
-    "version": "5.6.39"
+    "version": "5.6.43"
 }
