--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ copyright-name=HostLink
 logo=
 
 forget pwd email/subject=Your password had been reset
-forget pwd email/content=Your new password\n\nusername:{username}\npassword:{password}
+forget pwd email/content=Your new password<br/><br/>nusername:{username}<br/>password:{password}
 
 search-form=false
 default-skin=skin-blue
