--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": ">=5.6",
-        "hostlink/r-psr7": "^2.1",
+        "hostlink/r-psr7": "^2.1.1",
         "hostlink/r": "^2.4",
         "hostlink/r-p": "^1.1.6",
         "hostlink/r-bs": "1.*",
@@ -34,6 +34,7 @@
         "hostlink/weather": "1.*",
         "hostlink/html": "1.*",
         "mathsgod/translate": "1.*",
+        "hostlink/fancybox": "3.*",
         "twig/twig": "*",
         "twig/extensions": "*",
         "sepia/po-parser": "5.*",
@@ -80,5 +81,5 @@
         }
     ],
     "minimum-stability": "stable",
-    "version": "5.6.56"
+    "version": "5.6.57"
 }
