--- a/pages/System/setting.yml
+++ b/pages/System/setting.yml
@@ -23,6 +23,6 @@ menu:
     icon: fa fa-list-alt fa-fw
   DB:
     link: System/db
-    icon: fa fa-database
+    icon: fa fa-database fa-fw
   
   
