--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "bootstrap-sass": "^3.3.7",
     "bootstrap-select": "^1.13.3",
     "daterangepicker": "^3.0.3",
+    "fullcalendar": "^3.9.0",
     "jquery": "^2.2.4",
-    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "jquery-validation": "^1.18.0",
     "less": "^3.8.1",
     "mini-css-extract-plugin": "^0.4.4",
