--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.2",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.8.0",
