--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "datatables-all": "^1.10.13",
     "datatables.net": "^1.10.19",
     "daterangepicker": "^3.0.3",
+    "detect-browser": "^3.0.1",
     "fullcalendar": "^3.9.0",
     "ionicons": "^4.4.6",
     "jquery": "^2.2.4",
@@ -32,6 +33,9 @@
     "x-html": "bitbucket:mathsgod/x-html"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
