--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
             "function/function.php"
         ]
     },
-    "repositories": {
-        "hostlink-raymond": {
+    "repositories": [
+        {
             "type": "composer",
-            "url": "https://raymond2.hostlink.com.hk/bitbucket/repo"
+            "url": "https://raymond2.hostlink.com.hk/satis/web"
         }
-    },
+    ],
     "require": {
         "php": ">=5.6",
         "hostlink/r-psr7": "^2.1.1",
@@ -39,11 +39,12 @@
         "hostlink/font-awesome": "5.*",
         "bassjobsen/bootstrap-3-typeahead": "4.*",
         "eonasdan/bootstrap-datetimepicker": "4.*",
-        "robinherbots/jquery.inputmask": "4.*",
+        "robinherbots/jquery.inputmask": "^4.0",
         "cache/apcu-adapter": "1.*",
         "phpmailer/phpmailer": "6.*",
         "symfony/yaml": "3.*",
-        "monolog/monolog": "1.*"
+        "monolog/monolog": "1.*",
+        "mathsgod/data-structure": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
