--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
         "cache/apcu-adapter": "1.*",
         "phpmailer/phpmailer": "6.*",
         "symfony/yaml": "3.*",
-        "monolog/monolog": "1.*",
-        "mathsgod/data-structure": "^1.0"
+        "monolog/monolog": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
