--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
         "mathsgod/p-query": "^1.1.6",
         "mathsgod/bs": "1.*",
         "mathsgod/r-db": "^2.0.3",
-        "mathsgod/holiday-hk": "^1.2.1",
-        "mathsgod/weather": "1.*",
+        "mathsgod/hl-holiday": "^1.2.1",
+        "mathsgod/hl-weather": "1.*",
         "mathsgod/html": "1.*",
-        "mathsgod/translate": "1.*",
+        "mathsgod/r-translate": "1.*",
         "twig/twig": "*",
         "twig/extensions": "*",
         "hostlink/font-awesome": "5.*",
