--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "cache/apcu-adapter": "1.*",
         "phpmailer/phpmailer": "6.*",
         "symfony/yaml": "3.*",
-        "monolog/monolog": "1.*"
+        "monolog/monolog": "1.*",
+        "mathsgod/r-webauthn": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
