--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "phpmailer/phpmailer": "6.*",
         "symfony/yaml": "3.*",
         "monolog/monolog": "1.*",
-        "mathsgod/r-webauthn": "^1.0"
+        "mathsgod/r-webauthn": "^1.0",
+        "mathsgod/r-graphql": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
