--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ database=raymond
 
 [system]
 user_default_acl=0
+update_source=https://raymond2.hostlink.com.hk/cms4_source/
 
 [user]
 company=HostLink
@@ -54,3 +55,5 @@ projectId=
 storageBucket=
 messagingSenderId=
 
+[language]
+en=English
