--- a/alt-component/package.json
+++ b/alt-component/package.json
@@ -8,16 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17",
+    "vue": "^2.6.8",
     "vue-localstorage": "^0.6.2",
     "vue-register-element": "git+https://github.com/mathsgod/VueRegisterElement.git",
     "vue-resource": "^1.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-service": "^3.5.0",
+    "vue-template-compiler": "^2.6.8",
+    "webpack-dev-server": "^3.2.1"
   },
   "eslintConfig": {
     "root": true,
