--- a/acl.ini
+++ b/acl.ini
@@ -31,6 +31,7 @@ UserGroup/v_user=Power Users
 UserGroup/userlist=Power Users
 UserGroup/test=Power Users
 UserGroup/list/user=Power Users
+UserGroup/ae_user=Power Users
 
 System/image=Power Users,Users
 System/forget_password=Guests
