--- a/composer.json
+++ b/composer.json
@@ -55,11 +55,11 @@
         "mathsgod/r-webauthn": "^1.0",
         "mathsgod/r-graphql": "^1.2",
         "mathsgod/r": "^2.5",
-        "mathsgod/r-db": "^3.0"
+        "mathsgod/r-db": "^3.0",
+        "mathsgod/p-query": "^2.0",
+        "mathsgod/bs": "^1.1"
     },
     "require-dev": {
-        "mathsgod/bs": "dev-master",
-        "mathsgod/p-query": "dev-master",
         "phpunit/phpunit": "*"
     },
     "suggest": {
