--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "php": ">=7.0",
         "mathsgod/r-psr7": "^2.1.1",
         "mathsgod/hl-holiday": "^1.2.1",
-        "mathsgod/hl-weather": "1.*",
+        "mathsgod/hl-weather": "^2.0",
         "mathsgod/html": "1.*",
         "mathsgod/r-translate": "1.*",
         "twig/twig": "*",
