--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "mathsgod/r": "^2.5",
         "mathsgod/r-db": "^3.0",
         "mathsgod/p-query": "^2.0",
-        "mathsgod/bs": "^1.1"
+        "mathsgod/bs": "^1.1",
+        "mathsgod/gql-php-generator": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
