use module.class as value

--- a/acl.ini
+++ b/acl.ini
@@ -54,6 +54,9 @@ User/image=Power Users,Users
 
 [FC]
 Dashboard=Power Users,Users
+App\User=Power Users
+App\UserGroup=Power Users
+
 
 [C]
 App\User=Power Users
